--- a/index.html
+++ b/index.html
@@ -168,8 +168,11 @@
             </div>
         </div>
         </section>
-    
     </main>
+    <footer>
+        <p>© 2020 Bernardo Vasquez Memorial Central Elementary School</p>
+        <p>All Rights Reserved. Designed and Developed by BVMCES ICT Coordinator Dawn Andrew N. Rivero and Teaching Staff</p>
+    </footer>
     
 
     <script src="https://kit.fontawesome.com/1e73202a43.js" crossorigin="anonymous"></script>
